<?xml version="1.0"?>
<package format="2">
  <name>gazelle_sim_line_course</name>
  <version>0.0.1</version>
  <description>The Gazelle Sim line folllowing course</description>

  <maintainer email="gderose2@gmail.com">Joe DeRose</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
