<?xml version="1.0"?>
<package format="2">
  <name>hw08_lastname</name>
  <version>0.0.0</version>

  <description>The hw06 package</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>TODO</license>
    
  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
